# firstproject

./: .gitignore  AWS_BRANCH_SWITCH_MANUAL.md  OPERATIONS.md  README.md  eslint.config.mjs  next-auth.d.ts  package-lock.json  package.json  pyproject.toml  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/auth/me/: route.ts
app/api/auth/profile/: route.ts
app/api/news/: route.ts
app/api/news/[id]/: route.ts
app/api/rss/: route.ts
app/auth/login/: page.tsx
app/auth/register/: page.tsx
app/bookmarks/: page.tsx
app/news/[id]/: page.tsx
app/profile/: page.tsx
components/: app-providers.tsx  auth-form.tsx  header.tsx  news-card.tsx  theme-provider.tsx
components/ui/: sidebar.tsx
data/: mock-news.ts
lib/: ai-summary.ts  auth-options.ts  auth.ts  daily-briefing.ts  email-service.tsx  news-service.ts  rss-service.tsx  theme-context.tsx
prisma/: .gitignore  schema.prisma
prisma/migrations/20251122104252_/: migration.sql
prisma/migrations/20251124060522_add_is_translated/: migration.sql
prisma/migrations/20251124064035_/: migration.sql
prisma/migrations/20251130012202_add_email_subscription/: migration.sql
prisma/migrations/20251130014515_add_news_summary_and_sync_log/: migration.sql
prisma/migrations/20260326000000_drop_is_translated/: migration.sql
prisma/migrations/20260326094531_remove_news_category_default_general/: migration.sql
prisma/migrations/20260407153112_category_default_100/: migration.sql
scripts/: setup.py  setup.ts  translate-existing-news.ts
(+9 files in other folders)
