[tool.poetry]
name = "newshub-tooling"
version = "0.1.0"
description = "Operational automation scripts and utilities for NewsHub."
authors = ["NewsHub Team <dev@newshub.local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

